--- a/res/res/values/attrs.xml
+++ b/res/res/values/attrs.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2016 The SlimRoms Project
+<!-- Copyright (C) 2016-2017 The SlimRoms Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -61,5 +61,11 @@
             <enum name="secure" value="2" />
         </attr>
     </declare-styleable>
+
+    <declare-styleable name="ColorPickerPreference">
+        <attr name="defaultColor" format="color" />
+        <attr name="alphaSliderEnabled" format="boolean" />
+    </declare-styleable>
+
 
 </resources>
