More settings cleanup
 * Use one fragment for most slim settings

 * Create SlimPreferenceManager to handle SlimPreferences

 * Allow preferences to depend on list preferences
   - use slim:listDependency="<list_setting_key>|<list_entry>"
       to disable a preference if a certain entry is selected
       separate multiple entries with a ":"

 * Allow preferences to be hidden based on integer or boolean
   - Use slim:hidePreference="<boolean>" to hide a preference
   - Use slim:hidePreferenceInt="<int>" to define a integer
      to hide a preference and use
      slim:hidePreferenceIntDependency="<int>" to define the
      integer that hidePreferenceInt equals to disable, default 0

 * Move more code to the preferences to get rid of dupe code

 * Remove SlimPreference if Intent is not null and does not exist

 * general cleanup

Change-Id: I125105d99bab142efe656c1f6eec9a46f8fdac81

--- a/packages/SlimSettings/res/xml/recent_panel_settings.xml
+++ b/packages/SlimSettings/res/xml/recent_panel_settings.xml
@@ -43,12 +43,11 @@
             android:title="@string/recent_panel_expanded_mode_title"
             android:summary="@string/recent_panel_expanded_mode_summary" />
 
-        <SwitchPreference
+        <slim.preference.SlimSwitchPreference
             android:dependency="use_slim_recents"
             android:key="recent_panel_lefty_mode"
             android:title="@string/recent_panel_lefty_mode_title"
-            android:summary="@string/recent_panel_lefty_mode_summary"
-            android:persistent="false" />
+            android:summary="@string/recent_panel_lefty_mode_summary" />
 
         <slim.preference.SlimSwitchPreference
             android:dependency="use_slim_recents"
@@ -67,21 +66,21 @@
             android:dependency="use_slim_recents"
             android:key="recent_panel_bg_color"
             android:title="@string/recent_panel_bg_color_title"
-            android:defaultValue="0x00ffffff"
-            alphaSlider="true" />
+            slim:defaultColor="#00ffffff"
+            slim:alphaSliderEnabled="true" />
 
         <slim.preference.colorpicker.ColorPickerPreference
             android:dependency="use_slim_recents"
             android:key="recent_card_bg_color"
             android:title="@string/recent_card_bg_color_title"
-            android:defaultValue="0x00ffffff"
-            alphaSlider="true" />
+            slim:defaultColor="#00ffffff"
+            slim:alphaSliderEnabled="true" />
 
         <slim.preference.colorpicker.ColorPickerPreference
             android:dependency="use_slim_recents"
             android:key="recent_card_text_color"
             android:title="@string/recent_card_text_color_title"
-            android:defaultValue="0x00ffffff"
-            alphaSlider="true" />
+            slim:defaultColor="#00ffffff"
+            slim:alphaSliderEnabled="true" />
 
 </PreferenceScreen>
