--- a/res/res/values/attrs.xml
+++ b/res/res/values/attrs.xml
@@ -60,6 +60,10 @@
             <enum name="global" value="1" />
             <enum name="secure" value="2" />
         </attr>
+        <attr name="listDependency" format="string" />
+        <attr name="hidePreference" format="boolean" />
+        <attr name="hidePreferenceInt" format="integer" />
+        <attr name="hidePreferenceIntDependency" format="integer" />
     </declare-styleable>
 
     <declare-styleable name="ColorPickerPreference">
