--- a/packages/SlimSettings/res/xml/navbar_button_style.xml
+++ b/packages/SlimSettings/res/xml/navbar_button_style.xml
@@ -16,33 +16,28 @@
 
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     xmlns:slim="http://schemas.android.com/apk/res/slim"
     android:title="@string/nav_bar_button_style">
 
-    <!-- Status bar tweaks -->
-    <PreferenceCategory
-        android:title="@string/nav_bar_button_style">
+    <slim.preference.colorpicker.ColorPickerPreference
+         android:key="navigation_bar_button_tint"
+         android:title="@string/navigation_bar_icon_tint_title"
+         slim:defaultColor="#ffffffff"
+         slim:listDependency="navigation_bar_button_tint_mode:3"
+         slim:alphaSliderEnabled="true" />
 
-        <slim.preference.colorpicker.ColorPickerPreference
-             android:key="navigation_bar_button_tint"
-             android:title="@string/navigation_bar_icon_tint_title"
-             android:defaultValue="0xffffffff"
-             slim:listDependency="navigation_bar_button_tint_mode:3" />
+    <slim.preference.SlimListPreference
+         android:entries="@array/icon_color_mode_entries"
+         android:entryValues="@array/icon_color_mode_values"
+         android:key="navigation_bar_button_tint_mode"
+         android:title="@string/nav_button_color_mode_title"
+         android:dialogTitle="@string/nav_button_color_mode_dialog_title"
+         android:summary="@string/nav_button_color_mode_summary" />
 
-        <slim.preference.SlimListPreference
-             android:entries="@array/icon_color_mode_entries"
-             android:entryValues="@array/icon_color_mode_values"
-             android:key="navigation_bar_button_tint_mode"
-             android:title="@string/nav_button_color_mode_title"
-             android:dialogTitle="@string/nav_button_color_mode_dialog_title"
-             android:summary="@string/nav_button_color_mode_summary" />
-
-        <slim.preference.colorpicker.ColorPickerPreference
-             android:key="navigation_bar_glow_tint"
-             android:title="@string/navigation_bar_glow_tint_title"
-             android:defaultValue="0xffffffff" />
-
-    </PreferenceCategory>
+    <slim.preference.colorpicker.ColorPickerPreference
+         android:key="navigation_bar_glow_tint"
+         android:title="@string/navigation_bar_glow_tint_title"
+         slim:defaultColor="#ffffffff"
+         slim:alphaSliderEnabled="true" />
 
 </PreferenceScreen>
