--- a/packages/SlimSettings/res/xml/navbar_settings.xml
+++ b/packages/SlimSettings/res/xml/navbar_settings.xml
@@ -21,7 +21,8 @@
         <slim.preference.SlimSwitchPreference
                 android:key="navigation_bar_show"
                 android:title="@string/navbar_enable_bar"
-                android:summary="@string/navbar_enable_bar_summary" />
+                android:summary="@string/navbar_enable_bar_summary"
+                slim:hidePreference="@*android:bool/config_showNavigationBar" />
 
         <PreferenceCategory
                 android:key="navbar_cat"
@@ -40,10 +41,12 @@
             </PreferenceScreen>
 
             <PreferenceScreen
-                android:fragment="com.slim.settings.fragments.NavBarButtonStyle"
+                android:fragment="com.slim.settings.fragments.SlimPreferenceFragment"
                 android:key="nav_bar_button_style"
                 android:title="@string/nav_bar_button_style"
-                android:summary="@string/nav_bar_button_style_summary" />
+                android:summary="@string/nav_bar_button_style_summary">
+                <extra android:name="preference_xml" android:value="navbar_button_style" />
+            </PreferenceScreen>
 
             <PreferenceScreen
                 android:key="navbar_style_dimen_settings"
@@ -58,15 +61,15 @@
                 android:dependency="navigation_bar_show"
                 android:title="@string/advanced_settings">
 
-            <ListPreference
-                    android:key="pref_navbar_menu_display"
+            <slim.preference.SlimListPreference
+                    android:key="menu_visibility"
                     android:entries="@array/pref_menu_display_entries"
                     android:entryValues="@array/pref_menu_display_values"
                     android:title="@string/title_pref_menu_display"
                     android:summary="@string/summary_pref_menu_display" />
 
-            <ListPreference
-                    android:key="pref_navbar_menu_location"
+            <slim.preference.SlimListPreference
+                    android:key="menu_location"
                     android:entries="@array/pref_navigation_menu_entries"
                     android:entryValues="@array/pref_navigation_menu_values"
                     android:title="@string/title_pref_menu_location"
