--- a/packages/SlimSettings/res/xml/slim_interface_settings.xml
+++ b/packages/SlimSettings/res/xml/slim_interface_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2013-2016 SlimRoms Project
+<!-- Copyright (C) 2013-2017 SlimRoms Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -21,12 +21,16 @@
 
     <PreferenceScreen
         android:key="status_bar"
-        android:fragment="com.slim.settings.fragments.StatusBar"
-        android:title="@string/status_bar_title" />
+        android:fragment="com.slim.settings.fragments.SlimPreferenceFragment"
+        android:title="@string/status_bar_title">
+        <extra android:name="preference_xml" android:value="status_bar_settings" />
+    </PreferenceScreen>
 
     <PreferenceScreen
         android:key="recent_panel"
         android:fragment="com.slim.settings.fragments.RecentPanel"
-        android:title="@string/recent_panel_category" />
+        android:title="@string/recent_panel_category">
+        <extra android:name="preference_xml" android:value="recent_panel_settings" />
+    </PreferenceScreen>
 
 </PreferenceScreen>
