--- a/packages/SlimSettings/res/xml/slim_navigation_settings.xml
+++ b/packages/SlimSettings/res/xml/slim_navigation_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2013-2016 Slimroms
+<!-- Copyright (C) 2013-2017 Slimroms
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -14,26 +14,29 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/navigation_settings_options_title"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    xmlns:slim="http://schemas.android.com/apk/res/slim">
 
     <PreferenceScreen
         android:key="navbar_settings"
-        android:fragment="com.slim.settings.fragments.NavbarSettings"
-        android:title="@string/navigation_bar" />
+        android:fragment="com.slim.settings.fragments.SlimPreferenceFragment"
+        android:title="@string/navigation_bar">
+        <extra android:name="preference_xml" android:value="navbar_settings" />
+    </PreferenceScreen>
 
-    <PreferenceScreen
+    <slim.preference.SlimPreference
         android:key="hardwarekeys_settings"
         android:fragment="com.slim.settings.fragments.HardwareKeysSettings"
-        android:title="@string/button_keys_title" />
+        android:title="@string/button_keys_title"
+        slim:hidePreferenceInt="@*slim:integer/config_deviceHardwareKeys" />
 
     <!-- DeviceHandler device specific screen off gesture settings -->
-    <Preference
+    <slim.preference.SlimPreference
         android:key="screen_off_gesture_settings"
         android:title="@string/screen_off_gesture_settings_title">
             <intent
                 android:action="com.slim.action.LAUNCH_SCREEN_OFF_GESTURE_SETTINGS"
                 android:targetPackage="com.slim.device"
                 android:targetClass="com.slim.device.settings.ScreenOffGestureSettings" />
-    </Preference>
+    </slim.preference.SlimPreference>
 
 </PreferenceScreen>
