--- a/packages/SlimSettings/res/xml/status_bar_clock_style.xml
+++ b/packages/SlimSettings/res/xml/status_bar_clock_style.xml
@@ -16,67 +16,76 @@
 
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:slim="http://schemas.android.com/apk/res/slim"
     android:title="@string/status_bar_clock_title">
 
-       <SwitchPreference
-            android:key="status_bar_show_clock"
+       <slim.preference.SlimSwitchPreference
+            android:key="status_bar_clock"
             android:title="@string/status_bar_show_clock_title"
             android:defaultValue="true" />
 
-       <SwitchPreference
+       <slim.preference.SlimSwitchPreference
             android:key="statusbar_clock_color_override"
             android:title="@string/status_bar_clock_color_override"
             android:defaultValue="false"
             android:dependency="status_bar_show_clock" />
 
         <slim.preference.colorpicker.ColorPickerPreference
-            android:key="clock_color"
+            android:key="statusbar_clock_color"
             android:title="@string/clock_color_title"
-            android:defaultValue="0xffffff"
+            slim:defaultColor="#ffffffff"
             android:dependency="statusbar_clock_color_override" />
 
-        <ListPreference
-            android:key="clock_style"
+        <slim.preference.SlimListPreference
+            android:key="statusbar_clock_style"
             android:entries="@array/clock_style_entries"
             android:entryValues="@array/clock_style_values"
             android:title="@string/clock_title_enable"
+            android:summary="%s"
             android:dependency="status_bar_show_clock" />
 
-        <ListPreference
-            android:key="status_bar_am_pm"
+        <slim.preference.SlimListPreference
+            android:key="statusbar_clock_am_pm_style"
             android:dialogTitle="@string/status_bar_am_pm_title"
             android:title="@string/status_bar_am_pm_title"
+            android:summary="%s"
             android:entries="@array/entries_status_bar_am_pm"
             android:entryValues="@array/values_status_bar_am_pm"
             android:dependency="status_bar_show_clock" />
 
-        <ListPreference
-            android:key="clock_date_display"
+        <slim.preference.SlimListPreference
+            android:key="statusbar_clock_date_display"
             android:title="@string/clock_date_display"
-            android:summary="@string/clock_date_display_summary"
+            android:summary="%s"
             android:entries="@array/clock_date_display_entries"
             android:entryValues="@array/clock_date_display_values"
             android:dependency="status_bar_show_clock" />
 
-        <ListPreference
+        <slim.preference.SlimListPreference
             android:key="clock_date_style"
             android:title="@string/clock_date_style"
             android:entries="@array/clock_date_style_entries"
             android:entryValues="@array/clock_date_style_values"
-            android:dependency="status_bar_show_clock" />
+            android:dependency="status_bar_show_clock"
+            android:persistent="false"
+            slim:listDependency="statusbar_clock_date_display|0" />
 
-         <ListPreference
+         <slim.preference.SlimListPreference
             android:key="clock_date_position"
             android:title="@string/clock_date_position"
             android:entries="@array/clock_date_position_entries"
             android:entryValues="@array/clock_date_position_values"
-            android:dependency="status_bar_show_clock" />
+            android:dependency="status_bar_show_clock"
+            android:persistent="false"
+            slim:listDependency="statusbar_clock_date_display|0" />
 
-        <ListPreference
+        <slim.preference.SlimListPreference
             android:key="clock_date_format"
             android:title="@string/clock_date_format"
             android:entries="@array/clock_date_format_entries_values"
             android:entryValues="@array/clock_date_format_entries_values"
-            android:dependency="status_bar_show_clock" />
+            android:dependency="status_bar_show_clock"
+            android:persistent="false"
+            slim:listDependency="statusbar_clock_date_display|0" />
 
 </PreferenceScreen>
