--- a/packages/SlimSettings/res/xml/status_bar_settings.xml
+++ b/packages/SlimSettings/res/xml/status_bar_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright (C) 2013-2016 SlimRoms Project
+<!-- Copyright (C) 2013-2017 SlimRoms Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -16,7 +16,7 @@
 
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+    xmlns:slim="http://schemas.android.com/apk/res/slim"
     android:title="@string/status_bar_title">
 
     <PreferenceScreen
@@ -36,26 +36,31 @@
         <PreferenceScreen
             android:fragment="com.slim.settings.fragments.StatusBarClockStyle"
             android:key="clock_style_pref"
-            android:title="@string/status_bar_clock" />
+            android:title="@string/status_bar_clock">
+            <extra android:name="preference_xml" android:value="status_bar_clock_style" />
+        </PreferenceScreen>
 
     </PreferenceCategory>-->
 
     <PreferenceCategory
             android:title="@string/battery_icon_options_title">
 
-        <ListPreference
+        <slim.preference.SlimListPreference
             android:key="status_bar_battery_style"
             android:title="@string/status_bar_battery_style_title"
             android:dialogTitle="@string/status_bar_battery_style_title"
             android:entries="@array/status_bar_battery_style_entries"
-            android:entryValues="@array/status_bar_battery_style_values" />
+            android:entryValues="@array/status_bar_battery_style_values"
+            slim:slimSettingType="secure" />
 
-        <ListPreference
-            android:key="status_bar_show_battery_percent"
+        <slim.preference.SlimListPreference
+            android:key="status_bar_battery_percent"
             android:title="@string/status_bar_battery_percentage_title"
             android:dialogTitle="@string/status_bar_battery_percentage_dialog_title"
             android:entries="@array/status_bar_battery_percentage_entries"
-            android:entryValues="@array/status_bar_battery_percentage_values" />
+            android:entryValues="@array/status_bar_battery_percentage_values"
+            slim:listDependency="status_bar_battery_style:4|6"
+            slim:slimSettingType="secure" />
     </PreferenceCategory>
 
 </PreferenceScreen>
