Add SlimActionsPreference to handle selecting custom actions
Change-Id: Ic51bb09c20aac9d8d81c12920220eb8c359ed2f1

--- a/packages/SlimSettings/res/xml/slim_interface_settings.xml
+++ b/packages/SlimSettings/res/xml/slim_interface_settings.xml
@@ -16,8 +16,8 @@
 
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:title="@string/interface_settings_title"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    xmlns:slim="http://schemas.android.com/apk/res/slim"
+    android:title="@string/interface_settings_title">
 
     <PreferenceScreen
         android:key="status_bar"
