Add SlimActionsPreference to handle selecting custom actions
Change-Id: Ic51bb09c20aac9d8d81c12920220eb8c359ed2f1

--- a/res/res/values/attrs.xml
+++ b/res/res/values/attrs.xml
@@ -80,4 +80,10 @@
         <attr name="units" format="string|reference" />
     </declare-styleable>
 
+    <declare-styleable name="SlimActionsPreference">
+        <attr name="showWake" format="boolean" />
+        <attr name="showNone" format="boolean" />
+        <attr name="removeActions" format="string" />
+    </declare-styleable>
+
 </resources>
