--- a/packages/SlimSettings/res/xml/slim_interface_settings.xml
+++ b/packages/SlimSettings/res/xml/slim_interface_settings.xml
@@ -17,8 +17,7 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:slim="http://schemas.android.com/apk/res/slim"
-    android:title="@string/interface_settings_title"
-    android:key="slim_interface_settings">
+    android:title="@string/interface_settings_title">
 
     <PreferenceScreen
         android:key="status_bar"
