Fix show running tasks in SlimRecents
Change-Id: I3d9bf8aa5e22deb36d0a61b7179d890ecf4b3f57

--- a/packages/SlimSettings/res/xml/recent_panel_settings.xml
+++ b/packages/SlimSettings/res/xml/recent_panel_settings.xml
@@ -25,7 +25,7 @@
             android:defaultValue="true" />
 
         <slim.preference.SlimSwitchPreference
-            android:key="only_show_running_tasks"
+            android:key="show_running_tasks"
             android:title="@string/show_running_tasks_title"
             android:defaultValue="false" />
 
