--- a/packages/SlimSettings/res/xml/gesture_settings.xml
+++ b/packages/SlimSettings/res/xml/gesture_settings.xml
@@ -19,11 +19,17 @@ limitations under the License.
     xmlns:slim="http://schemas.android.com/apk/res/slim"
     android:title="@string/gesture_settings_title">
 
-    <slim.preference.SlimSwitchPreference
+    <!--<slim.preference.SlimSwitchPreference
         android:key="double_tap_to_wake"
         android:title="@string/tap_to_wake_title"
         android:summary="@string/tap_to_wake_summary"
         slim:slimSettingType="aosp-secure"
+        slim:hidePreference="@*android:bool/config_supportDoubleTapWake" />-->
+
+    <slim.preference.SlimActionsPreference
+        android:key="key_wake_action"
+        android:title="@string/tap_to_wake_title"
+        slim:showWake="true"
         slim:hidePreference="@*android:bool/config_supportDoubleTapWake" />
 
     <slim.preference.SlimSwitchPreference
