--- a/res/res/values/config.xml
+++ b/res/res/values/config.xml
@@ -33,6 +33,7 @@
 
     <string-array name="config_externalSlimServices">
         <item>org.slim.service.SlimActionsService</item>
+        <item>org.slim.service.SlimLightsService</item>
     </string-array>
 
     <!-- The duration (in milliseconds) of recent app screen animation. -->
@@ -46,4 +47,41 @@
 
     <!-- Slim Recents default allowed max apps -->
     <integer name="slim_recents_max_apps_default">25</integer>
+
+    <!-- Do not translate. Defines the mapping of notification package names
+         from the actual triggering package to the user selectable package.
+         E.g. GTalk notifications come via Google Services Framework
+         Format: [triggering package]|[user package] -->
+    <string-array name="notification_light_package_mapping" translatable="false">
+        <item>com.google.android.gsf|com.google.android.talk</item>
+    </string-array>
+
+    <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
+    <bool name="config_intrusiveNotificationLed">false</bool>
+
+    <!-- Does the notification LED support multiple colors -->
+    <bool name="config_multiColorNotificationLed">false</bool>
+
+    <!-- Is the battery LED intrusive? -->
+    <bool name="config_intrusiveBatteryLed">false</bool>
+
+    <!-- Does the battery LED support multiple colors? -->
+    <bool name="config_multiColorBatteryLed">false</bool>
+
+    <integer name="config_notificationsBatteryMediumFastARGB">0xFF0000FF</integer>
+
+    <integer name="config_chargingFastThreshold">1500000</integer>
+
+    <!-- Do the battery/notification LEDs support pulsing?
+         Used to decide if we show pulse settings -->
+    <bool name="config_ledCanPulse">true</bool>
+
+    <!-- Vibrator pattern for notifications while alerts
+         are disabled -->
+    <integer-array name="config_notificationNoAlertsVibePattern">
+        <item>0</item>
+        <item>50</item>
+        <item>100</item>
+        <item>50</item>
+    </integer-array>
 </resources>
