--- a/res/res/values/symbols.xml
+++ b/res/res/values/symbols.xml
@@ -190,4 +190,16 @@
     <java-symbol type="string" name="increasing_ring_volume_option_title" />
     <java-symbol type="string" name="increasing_ring_min_volume_title" />
     <java-symbol type="string" name="increasing_ring_ramp_up_time_title" />
+
+    <!-- Notification and battery light -->
+  <java-symbol type="bool" name="config_intrusiveNotificationLed" />
+  <java-symbol type="bool" name="config_multiColorNotificationLed" />
+  <java-symbol type="bool" name="config_intrusiveBatteryLed" />
+  <java-symbol type="bool" name="config_multiColorBatteryLed" />
+  <java-symbol type="bool" name="config_ledCanPulse" />
+  <java-symbol type="array" name="notification_light_package_mapping" />
+  <java-symbol type="array" name="config_notificationNoAlertsVibePattern" />
+  <java-symbol type="integer" name="config_notificationsBatteryMediumFastARGB" />
+  <java-symbol type="integer" name="config_chargingFastThreshold" />
+
 </resources>
