Add notification and battery light
Change-Id: Ie72e9669b65c275771ddcdfac5c066c81dc04d07

--- a/packages/SlimSettings/res/values/dimens.xml
+++ b/packages/SlimSettings/res/values/dimens.xml
@@ -39,4 +39,6 @@
     <!-- ActionBar contentInsetStart -->
     <dimen name="actionbar_contentInsetStart">16dp</dimen>
 
+    <dimen name="oval_notification_size">26dp</dimen>
+
 </resources>
