Add notification and battery light
Change-Id: Ie72e9669b65c275771ddcdfac5c066c81dc04d07

--- a/packages/SlimSettings/res/xml/notification_light_settings.xml
+++ b/packages/SlimSettings/res/xml/notification_light_settings.xml
@@ -60,6 +60,7 @@
     <PreferenceCategory
         android:key="applications_list"
         android:title="@string/notification_light_applist_title"
-        android:dependency="notification_light_pulse_custom_enable" />
+        android:dependency="notification_light_pulse_custom_enable" >
+    </PreferenceCategory>
 
 </PreferenceScreen>
