Add search to slimsettings
Change-Id: Ib16a7d5653e2b57fffcf916eca5f73e86418c954

--- a/packages/SlimSettings/res/xml/gesture_settings.xml
+++ b/packages/SlimSettings/res/xml/gesture_settings.xml
@@ -17,6 +17,7 @@ limitations under the License.
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:slim="http://schemas.android.com/apk/res/slim"
+    android:key="slim_gesture_settings"
     android:title="@string/gesture_settings_title">
 
     <!--<slim.preference.SlimSwitchPreference
