--- a/packages/SlimSettings/res/xml/battery_light_settings.xml
+++ b/packages/SlimSettings/res/xml/battery_light_settings.xml
@@ -15,7 +15,8 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+    android:key="battery_light_settings">
 
     <PreferenceCategory
         android:key="general_section"
