--- a/packages/SlimSettings/res/xml/slim_interface_settings.xml
+++ b/packages/SlimSettings/res/xml/slim_interface_settings.xml
@@ -17,7 +17,8 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:slim="http://schemas.android.com/apk/res/slim"
-    android:title="@string/interface_settings_title">
+    android:title="@string/interface_settings_title"
+    android:key="slim_interface_settings">
 
     <PreferenceScreen
         android:key="status_bar"
