--- a/packages/SlimSettings/res/xml/slim_navigation_settings.xml
+++ b/packages/SlimSettings/res/xml/slim_navigation_settings.xml
@@ -14,7 +14,8 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/navigation_settings_options_title"
-    xmlns:slim="http://schemas.android.com/apk/res/slim">
+    xmlns:slim="http://schemas.android.com/apk/res/slim"
+    android:key="slim_navigation_settings">
 
     <PreferenceScreen
         android:key="navbar_settings"
