--- a/packages/SlimSettings/res/xml/status_bar_clock_style.xml
+++ b/packages/SlimSettings/res/xml/status_bar_clock_style.xml
@@ -17,7 +17,8 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:slim="http://schemas.android.com/apk/res/slim"
-    android:title="@string/status_bar_clock_title">
+    android:title="@string/status_bar_clock_title"
+    android:key="status_bar_clock_style">
 
     <slim.preference.SlimSwitchPreference
         android:key="status_bar_clock"
