--- a/packages/SlimSettings/res/xml/status_bar_settings.xml
+++ b/packages/SlimSettings/res/xml/status_bar_settings.xml
@@ -17,7 +17,8 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:slim="http://schemas.android.com/apk/res/slim"
-    android:title="@string/status_bar_title">
+    android:title="@string/status_bar_title"
+    android:key="status_bar_settings">
 
     <PreferenceScreen
         android:key="status_bar_icons"
@@ -31,7 +32,7 @@
     </PreferenceScreen>
 
     <!--<PreferenceCategory
-            android:title="@string/status_bar_style_title">
+        android:title="@string/status_bar_style_title">
 
         <PreferenceScreen
             android:fragment="com.slim.settings.fragments.StatusBarClockStyle"
@@ -43,7 +44,8 @@
     </PreferenceCategory>-->
 
     <PreferenceCategory
-        android:title="@string/battery_icon_options_title">
+        android:title="@string/battery_icon_options_title"
+        android:key="status_bar_battery_category">
 
         <slim.preference.SlimListPreference
             android:key="status_bar_battery_style"
