--- a/res/res/values/attrs.xml
+++ b/res/res/values/attrs.xml
@@ -63,6 +63,7 @@
             <enum name="aosp-global" value="4" />
             <enum name="aosp-secure" value="5" />
         </attr>
+        <attr name="preferenceXml" format="string" />
         <attr name="listDependency" format="string" />
         <attr name="hidePreference" format="boolean" />
         <attr name="hidePreferenceInt" format="integer" />
