Add search to slimsettings
Change-Id: Ib16a7d5653e2b57fffcf916eca5f73e86418c954

--- a/res/res/values/attrs.xml
+++ b/res/res/values/attrs.xml
@@ -60,6 +60,7 @@
             <enum name="global" value="1" />
             <enum name="secure" value="2" />
         </attr>
+        <attr name="preferenceXml" format="string" />
         <attr name="listDependency" format="string" />
         <attr name="hidePreference" format="boolean" />
         <attr name="hidePreferenceInt" format="integer" />
