--- a/res/res/values/symbols.xml
+++ b/res/res/values/symbols.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2016 The SlimRoms Project
+     Copyright (C) 2016-2017 The SlimRoms Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -19,9 +19,6 @@
 
     <java-symbol type="color" name="dslv_icon_dark" />
     <java-symbol type="color" name="dslv_float_background_color" />
-
-    <java-symbol type="layout" name="action_list_view_main" />
-    <java-symbol type="layout" name="action_list_view_item" />
 
     <!-- General Strings -->
     <java-symbol type="string" name="help" />
