Fix default values for some slim settings
Change-Id: Idaf1f36433232fbf73b540ab776738c6bb205aee

--- a/packages/SlimSettings/res/xml/navbar_settings.xml
+++ b/packages/SlimSettings/res/xml/navbar_settings.xml
@@ -22,6 +22,7 @@
                 android:key="navigation_bar_show"
                 android:title="@string/navbar_enable_bar"
                 android:summary="@string/navbar_enable_bar_summary"
+                android:defaultValue="@*android:bool/config_showNavigationBar"
                 slim:hidePreference="@*android:bool/config_showNavigationBar" />
 
         <PreferenceCategory
