--- a/packages/SlimSettings/res/xml/recent_panel_settings.xml
+++ b/packages/SlimSettings/res/xml/recent_panel_settings.xml
@@ -25,14 +25,17 @@
             android:defaultValue="true" />
 
         <slim.preference.SlimSwitchPreference
+            android:dependency="use_slim_recents"
             android:key="show_running_tasks"
             android:title="@string/show_running_tasks_title"
             android:defaultValue="false" />
 
         <slim.preference.SlimSeekBarPreference
+            android:dependency="use_slim_recents"
             android:key="recents_max_apps"
             android:title="@string/recents_max_apps_title"
             slim:minValue="5"
+            slim:defaultValue="@slim:integer/slim_recents_max_apps_default"
             slim:usePercentage="false" />
 
         <slim.preference.SlimListPreference
@@ -56,6 +59,7 @@
             android:summary="@string/recent_panel_show_topmost_summary" />
 
         <slim.preference.SlimSeekBarPreference
+            android:dependency="use_slim_recents"
             android:key="recent_panel_scale"
             android:title="@string/recent_panel_scale_title"
             slim:interval="5"
