--- a/res/res/values/attrs.xml
+++ b/res/res/values/attrs.xml
@@ -71,5 +71,13 @@
         <attr name="alphaSliderEnabled" format="boolean" />
     </declare-styleable>
 
+    <!-- Base attributes available to SlimSeekBarPreferencev2 -->
+    <declare-styleable name="SlimSeekBarPreferencev2">
+        <attr name="minValue" format="integer" />
+        <attr name="maxValue" format="integer" />
+        <attr name="defValue" format="integer" />
+        <attr name="interval" format="integer" />
+        <attr name="units" format="string|reference" />
+    </declare-styleable>
 
 </resources>
