SlimRecents: Fix scaling seekbar
Change-Id: I4d035cf1f1ada7ce4f26b2b45e633092d02e1fac

--- a/packages/SlimSettings/res/xml/recent_panel_settings.xml
+++ b/packages/SlimSettings/res/xml/recent_panel_settings.xml
@@ -60,7 +60,7 @@
 
         <slim.preference.SlimSeekBarPreference
             android:dependency="use_slim_recents"
-            android:key="recent_panel_scale"
+            android:key="recent_panel_scale_factor"
             android:title="@string/recent_panel_scale_title"
             slim:interval="5"
             slim:defaultValue="100"
