--- a/packages/SlimSystemUI/res/values/styles.xml
+++ b/packages/SlimSystemUI/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-/* Copyright 2016 SlimRoms Project
+/* Copyright 2016-2017 SlimRoms Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -71,6 +71,10 @@
     <style name="card.main_contentExpand_inside">
         <item name="android:background">@color/card_backgroundExpand</item>
         <item name="android:padding">@dimen/card_expand_layout_padding</item>
+    </style>
+
+    <style name="SlimRecentsCardOptionsButton">
+        <item name="android:padding">2dp</item>
     </style>
 
 </resources>
